Hide all by default and then display if in viewport (prevent jumping)

--- a/pontoon/base/static/css/user.css
+++ b/pontoon/base/static/css/user.css
@@ -155,6 +155,7 @@
   height: 16px;
   border-radius: 50%;
   margin-left: -12px;
+  visibility: hidden;
 }
 
 #timeline .content {
@@ -163,6 +164,7 @@
   position: relative;
   padding: 1.5em;
   top: -19px;
+  visibility: hidden;
   width: 39%;
 }
 
